--- a/apk/res/values-cs/strings.xml
+++ b/apk/res/values-cs/strings.xml
@@ -48,7 +48,7 @@
     <string name="recent_access_header" msgid="7623497371790225888">"Nedávný přístup"</string>
     <string name="no_recent_access" msgid="4724297929902441784">"Přístup ke službě Health Connect neměly v poslední době žádné aplikace"</string>
     <string name="show_recent_access_entries_button_title" msgid="3483460066767350419">"Zobrazit veškerý nedávný přístup"</string>
-    <string name="recent_access_screen_description" msgid="331101209889185402">"Zobrazte, které aplikace měly přístup k vašim datům za posledních 24 hodin"</string>
+    <string name="recent_access_screen_description" msgid="331101209889185402">"Podívejte se, které aplikace měly přístup k vašim datům za posledních 24 hodin"</string>
     <string name="today_header" msgid="1006837293203834373">"Dnes"</string>
     <string name="yesterday_header" msgid="6652176268273681505">"Včera"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"Přečteno: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
@@ -114,7 +114,7 @@
     <string name="background_read_combined_request_title" msgid="4184649296697480520">"Přístup k datům na pozadí"</string>
     <string name="background_read_combined_request_description" msgid="2423480522986545286">"Povolit této aplikaci přístup k datům Health Connect, když ji nepoužíváte"</string>
     <string name="history_read_medical_combined_request_title" msgid="1262267962861942478">"Přístup k dřívějším údajům o kondici a kvalitě života"</string>
-    <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"Povolit této aplikaci přístup k datům přidaným před <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
+    <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"Povolit této aplikaci přístup k datům přidaným před: <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_medical_combined_request_description_fallback" msgid="3567968660826834911">"Povolit této aplikaci přístup ke všem dřívějším datům"</string>
     <string name="history_read_combined_request_title" msgid="9023811767370482028">"Přístup k dřívějším datům"</string>
     <string name="history_read_combined_request_description" msgid="1437787086896636484">"Povolit této aplikaci přístup k datům Health Connect přidaným před <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
@@ -130,7 +130,7 @@
     <string name="background_read_access_title" msgid="4184498185599147117">"Přístup k datům na pozadí"</string>
     <string name="background_read_access_description" msgid="2360433029368320323">"Povolit této aplikaci přístup k datům Health Connect, když ji nepoužíváte"</string>
     <string name="history_read_medical_access_title" msgid="1375462150672418692">"Přístup k dřívějším údajům o kondici a kvalitě života"</string>
-    <string name="history_read_medical_access_description" msgid="5615959269427106141">"Povolit této aplikaci přístup k datům přidaným před <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
+    <string name="history_read_medical_access_description" msgid="5615959269427106141">"Povolit této aplikaci přístup k datům přidaným před: <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_medical_access_description_fallback" msgid="3888547064992673535">"Povolit této aplikaci přístup ke všem dřívějším datům"</string>
     <string name="history_read_access_title" msgid="870048398702887144">"Přístup k dřívějším datům"</string>
     <string name="history_read_access_description" msgid="800722432229526128">"Povolit této aplikaci přístup k datům Health Connect přidaným před <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
@@ -312,7 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"teplota kůže"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Čtení teploty kůže"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Zápis teploty kůže"</string>
-    <string name="browse_health_records_intro" msgid="1611488691642390523">"To zahrnuje všechny zdravotní záznamy synchronizované a přidané do Health Connect. Nejedná se se o vaše úplné lékařské záznamy včetně odborného popisu."</string>
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"To zahrnuje všechny zdravotní záznamy synchronizované a přidané do Health Connect. Nejedná se o vaše úplné lékařské záznamy včetně odborného popisu."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Všechny zdravotní záznamy"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"všechny zdravotní záznamy"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Zápis všech zdravotních záznamů"</string>
@@ -349,9 +349,9 @@
     <string name="visits_uppercase_label" msgid="8532619758336375886">"Návštěvy"</string>
     <string name="visits_lowercase_label" msgid="2545887061364564151">"návštěvy"</string>
     <string name="visits_content_description" msgid="6336796415049565697">"Číst návštěvy"</string>
-    <string name="vital_signs_uppercase_label" msgid="289862347143374640">"Vitální znaky"</string>
-    <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"vitální znaky"</string>
-    <string name="vital_signs_content_description" msgid="914944352640528612">"Číst vitální znaky"</string>
+    <string name="vital_signs_uppercase_label" msgid="289862347143374640">"Vitální funkce"</string>
+    <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"vitální funkce"</string>
+    <string name="vital_signs_content_description" msgid="914944352640528612">"Číst vitální funkce"</string>
     <string name="mindfulness_uppercase_label" msgid="7678646522566275472">"Mindfulness"</string>
     <string name="mindfulness_lowercase_label" msgid="5184488636180881614">"mindfulness"</string>
     <string name="mindfulness_read_content_description" msgid="739187536826062524">"Čtení dat o mindfulness"</string>
@@ -541,10 +541,8 @@
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect bezpečně ukládá údaje o zdraví a kondici, což umožňuje jednoduše synchronizovat různé aplikace v zařízení"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect ukládá a synchronizuje údaje o zdraví a kondici z různých aplikací.\n\n"<b>"Údaje o zdraví a kondici,"</b>" včetně záznamů cvičení, počtu kroků, výživy, spánku atd.\n\n"<b>"Zdravotní záznamy,"</b>" včetně očkování, laboratorních výsledků atd."</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Health Connect umožňuje"</string>
-    <!-- no translation found for share_data_text (6898398345784931678) -->
-    <skip />
-    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
-    <skip />
+    <string name="share_data_text" msgid="6898398345784931678"><b>"Sdílejte data se svými aplikacemi"</b>\n"Vyberte, která data mohou jednotlivé aplikace číst nebo zapisovat ve službě Health Connect"</string>
+    <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"Spravujte nastavení a ochranu soukromí"</b>\n"Kdykoli změňte oprávnění aplikací a spravujte data"</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Zpět"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Začít"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Smazat data"</string>
@@ -1118,7 +1116,7 @@
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"Synchronizujte první aplikace, mezi kterými chcete sdílet údaje o zdraví a kondici"</string>
     <string name="start_using_hc_set_up_button" msgid="7486865297236439364">"Nastavit"</string>
     <string name="connect_more_apps_banner_title" msgid="4746581834305054229">"Připojit další aplikace"</string>
-    <string name="connect_more_apps_banner_content" msgid="8104544246031860111">"Zahájení sdílení dat mezi aplikací <xliff:g id="APP_NAME">%s</xliff:g> a zdravotními aplikacemi v telefonu"</string>
+    <string name="connect_more_apps_banner_content" msgid="8104544246031860111">"Zahajte sdílení dat mezi aplikací <xliff:g id="APP_NAME">%s</xliff:g> a zdravotními aplikacemi v telefonu"</string>
     <string name="connect_more_apps_set_up_button" msgid="4491201768717567269">"Nastavit"</string>
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Zobrazit kompatibilní aplikace"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Vyhledání dalších aplikací k synchronizaci s aplikací <xliff:g id="APP_NAME">%s</xliff:g> přes Health Connect"</string>
