--- a/apk/res/values-el/strings.xml
+++ b/apk/res/values-el/strings.xml
@@ -79,7 +79,7 @@
     <string name="app_priority_button" msgid="3126133977893705098">"Προτεραιότητα εφαρμογών"</string>
     <string name="delete_category_data_button" msgid="2324773398768267043">"Διαγραφή δεδομένων για <xliff:g id="CATEGORY">%s</xliff:g>"</string>
     <string name="select_all_apps_title" msgid="884487568464305913">"Όλες οι εφαρμογές"</string>
-    <string name="can_read" msgid="4568261079308309564">"Δυνατότητα ανάγνωσης <xliff:g id="PERMISSION_TYPE">%s</xliff:g>"</string>
+    <string name="can_read" msgid="4568261079308309564">"Δυνατότητα ανάγνωσης για <xliff:g id="PERMISSION_TYPE">%s</xliff:g>"</string>
     <string name="can_write" msgid="5082414937218423823">"Δυνατότητα γραφής <xliff:g id="PERMISSION_TYPE">%s</xliff:g>"</string>
     <string name="inactive_apps" msgid="8956546286760797760">"Ανενεργές εφαρμογές"</string>
     <string name="inactive_apps_message" msgid="8335803540719022910">"Αυτές οι εφαρμογές δεν μπορούν πλέον να διαβάσουν ή να γράψουν <xliff:g id="DATA_TYPE">%s</xliff:g>, αλλά εξακολουθούν να έχουν δεδομένα αποθηκευμένα στο Health Connect"</string>
@@ -541,10 +541,8 @@
     <string name="onboarding_description" msgid="3479157507808350452">"Το Health Connect αποθηκεύει τα δεδομένα υγείας και φυσικής κατάστασής σας, προσφέροντας έναν απλό τρόπο συγχρονισμού των διαφορετικών εφαρμογών στη συσκευή σας"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Το Health Connect αποθηκεύει και συγχρονίζει τα δεδομένα υγείας και φυσικής κατάστασης από διαφορετικές εφαρμογές.\n\n"<b>"Δεδομένα φυσικής κατάστασης και ευεξίας,"</b>" όπως οι δραστηριότητες άσκησης, τα βήματα, η διατροφή, ο ύπνος και άλλα\n\n"<b>"Ιατρικοί φάκελοι,"</b>" όπως τα εμβόλια, τα αποτελέσματα εργαστηριακών εξετάσεων και άλλα"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Με το Health Connect, μπορείτε να κάνετε τα εξής"</string>
-    <!-- no translation found for share_data_text (6898398345784931678) -->
-    <skip />
-    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
-    <skip />
+    <string name="share_data_text" msgid="6898398345784931678"><b>"Μοιραστείτε δεδομένα με τις εφαρμογές σας"</b>\n"Επιλέξτε τα δεδομένα που μπορεί να διαβάσει ή να εγγράψει κάθε εφαρμογή στο Health Connect"</string>
+    <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"Διαχειριστείτε τις ρυθμίσεις και το απόρρητό σας"</b>\n"Αλλάξτε τις άδειες εφαρμογών και διαχειριστείτε τα δεδομένα σας ανά πάσα στιγμή"</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Επιστροφή"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Έναρξη"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Διαγραφή δεδομένων"</string>
@@ -1167,7 +1165,7 @@
     <string name="request_permissions_deny_all" msgid="4123735770293545320">"Απόρριψη όλων"</string>
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"Να επιτρέπεται στην εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> να έχει πρόσβαση σε δεδομένα φυσικής κατάστασης και ευεξίας;"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"Η εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> ζητά πρόσβαση στα δεδομένα <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nΕπιλέξτε να επιτραπεί η πρόσβαση σε όλα ή να τα ελέγξετε μεμονωμένα."</string>
-    <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Να επιτρέπεται η πρόσβαση της εφαρμογής <xliff:g id="APP_NAME">%1$s</xliff:g> στα δεδομένα <xliff:g id="DATA_TYPE">%2$s</xliff:g>;"</string>
+    <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Να επιτρέπεται η πρόσβαση της εφαρμογής <xliff:g id="APP_NAME">%1$s</xliff:g> στα δεδομένα: <xliff:g id="DATA_TYPE">%2$s</xliff:g>;"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"Φυσική κατάσταση και ευεξία"</string>
     <string name="view_permissions_all_the_time" msgid="6899702815770193290">"να επιτρέπεται πάντα"</string>
     <string name="view_permissions_while_in_use" msgid="2031627107397429473">"κατά τη χρήση"</string>
@@ -1187,6 +1185,6 @@
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Σύμβολο \"Χ\""</string>
     <string name="current_allow_mode" msgid="6716206063077569218">"Αυτή τη στιγμή, η εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> μπορεί να έχει πρόσβαση σε δεδομένα φυσικής κατάστασης και ευεξίας <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Να επιτρέπεται στην εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> η πρόσβαση σε δεδομένα φυσικής κατάστασης και ευεξίας ανά πάσα στιγμή;"</string>
-    <string name="current_access" msgid="1457167070428176139">"Η εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> έχει πρόσβαση στα δεδομένα <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="current_access" msgid="1457167070428176139">"Η εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> έχει πρόσβαση σε δεδομένα: <xliff:g id="DATA_TYPES">%2$s</xliff:g>"</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Διαχείριση αδειών φυσικής κατάστασης και ευεξίας"</string>
 </resources>
