--- a/apk/res/values-en-rIN/strings.xml
+++ b/apk/res/values-en-rIN/strings.xml
@@ -541,10 +541,8 @@
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect stores your health and fitness data, giving you a simple way to sync the different apps on your device"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect stores and syncs your health and fitness data from different apps.\n\n"<b>"Fitness and wellness data,"</b>" including exercise sessions, steps, nutrition, sleep and more\n\n"<b>"Health records,"</b>" including vaccines, lab results and more"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"With Health Connect, you can"</string>
-    <!-- no translation found for share_data_text (6898398345784931678) -->
-    <skip />
-    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
-    <skip />
+    <string name="share_data_text" msgid="6898398345784931678"><b>"Share data with your apps"</b>\n"Choose the data each app can read or write to Health Connect"</string>
+    <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"Manage your settings and privacy"</b>\n"Change app permissions and manage your data at any time"</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Go back"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Get started"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Delete data"</string>
