--- a/apk/res/values-es-rUS/strings.xml
+++ b/apk/res/values-es-rUS/strings.xml
@@ -108,14 +108,14 @@
     <string name="background_read_medical_combined_request_title_both_types_granted" msgid="4225111383019900451">"Acceso a todos los datos en segundo plano"</string>
     <string name="background_read_medical_combined_request_title_medical_granted" msgid="7245376864667067106">"Acceso a los registros de salud en segundo plano"</string>
     <string name="background_read_medical_combined_request_title_fitness_granted" msgid="2639416977416876229">"Acceso a los datos de actividad física y bienestar en segundo plano"</string>
-    <string name="background_read_medical_combined_request_description_both_types_granted" msgid="8812552783934180223">"Permite que esta app acceda a los datos de actividad física, bienestar y registros de salud cuando no la uses"</string>
-    <string name="background_read_medical_combined_request_description_medical_granted" msgid="5140647084504657934">"Permite que esta app acceda a estos datos cuando no la uses"</string>
-    <string name="background_read_medical_combined_request_description_fitness_granted" msgid="919785628751851996">"Permite que esta app acceda a estos datos cuando no la uses"</string>
+    <string name="background_read_medical_combined_request_description_both_types_granted" msgid="8812552783934180223">"Permitir que esta app acceda a los datos de actividad física, bienestar y registros de salud cuando no la uses"</string>
+    <string name="background_read_medical_combined_request_description_medical_granted" msgid="5140647084504657934">"Permitir que esta app acceda a estos datos cuando no la uses"</string>
+    <string name="background_read_medical_combined_request_description_fitness_granted" msgid="919785628751851996">"Permitir que esta app acceda a estos datos cuando no la uses"</string>
     <string name="background_read_combined_request_title" msgid="4184649296697480520">"Acceso a los datos en segundo plano"</string>
     <string name="background_read_combined_request_description" msgid="2423480522986545286">"Permite que esta app acceda a los datos de Health Connect cuando la app no está en uso"</string>
     <string name="history_read_medical_combined_request_title" msgid="1262267962861942478">"Acceso a los datos anteriores de actividad física y bienestar"</string>
-    <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"Permite que esta app acceda a los datos agregados antes del <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
-    <string name="history_read_medical_combined_request_description_fallback" msgid="3567968660826834911">"Permite que esta app acceda a todos los datos anteriores"</string>
+    <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"Permitir que esta app acceda a los datos agregados antes del <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
+    <string name="history_read_medical_combined_request_description_fallback" msgid="3567968660826834911">"Permitir que esta app acceda a todos los datos anteriores"</string>
     <string name="history_read_combined_request_title" msgid="9023811767370482028">"Acceso a los datos anteriores"</string>
     <string name="history_read_combined_request_description" msgid="1437787086896636484">"Permite que esta app acceda a los datos de Health Connect agregados antes del <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_combined_request_description_fallback" msgid="4974756796396067521">"Permite que esta app acceda a todos los datos anteriores de Health Connect"</string>
@@ -124,14 +124,14 @@
     <string name="background_read_medical_access_title_both_types_granted" msgid="4475972082863444603">"Acceso a todos los datos en segundo plano"</string>
     <string name="background_read_medical_access_title_medical_granted" msgid="7852915238347056139">"Acceso a los registros de salud en segundo plano"</string>
     <string name="background_read_medical_access_title_fitness_granted" msgid="8691675952190647227">"Acceso a los datos de actividad física y bienestar en segundo plano"</string>
-    <string name="background_read_medical_access_description_both_types_granted" msgid="7193350031798606366">"Permite que esta app acceda a los datos de actividad física, bienestar y registros de salud cuando no la uses"</string>
-    <string name="background_read_medical_access_description_medical_granted" msgid="8570683510275055450">"Permite que esta app acceda a estos datos cuando no la uses"</string>
-    <string name="background_read_medical_access_description_fitness_granted" msgid="2584567718805499407">"Permite que esta app acceda a estos datos cuando no la uses"</string>
+    <string name="background_read_medical_access_description_both_types_granted" msgid="7193350031798606366">"Permitir que esta app acceda a los datos de actividad física, bienestar y registros de salud cuando no la uses"</string>
+    <string name="background_read_medical_access_description_medical_granted" msgid="8570683510275055450">"Permitir que esta app acceda a estos datos cuando no la uses"</string>
+    <string name="background_read_medical_access_description_fitness_granted" msgid="2584567718805499407">"Permitir que esta app acceda a estos datos cuando no la uses"</string>
     <string name="background_read_access_title" msgid="4184498185599147117">"Acceso a los datos en segundo plano"</string>
     <string name="background_read_access_description" msgid="2360433029368320323">"Permite que esta app acceda a los datos de Health Connect cuando la app no está en uso"</string>
     <string name="history_read_medical_access_title" msgid="1375462150672418692">"Acceso a los datos anteriores de actividad física y bienestar"</string>
-    <string name="history_read_medical_access_description" msgid="5615959269427106141">"Permite que esta app acceda a los datos agregados antes del <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
-    <string name="history_read_medical_access_description_fallback" msgid="3888547064992673535">"Permite que esta app acceda a todos los datos anteriores"</string>
+    <string name="history_read_medical_access_description" msgid="5615959269427106141">"Permitir que esta app acceda a los datos agregados antes del <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
+    <string name="history_read_medical_access_description_fallback" msgid="3888547064992673535">"Permitir que esta app acceda a todos los datos anteriores"</string>
     <string name="history_read_access_title" msgid="870048398702887144">"Acceso a los datos anteriores"</string>
     <string name="history_read_access_description" msgid="800722432229526128">"Permite que esta app acceda a los datos de Health Connect agregados antes del <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_access_description_fallback" msgid="4151538305657852010">"Permite que esta app acceda a todos los datos anteriores de Health Connect"</string>
@@ -312,15 +312,15 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"temperatura cutánea"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Lee la temperatura cutánea"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Escribe la temperatura cutánea"</string>
-    <string name="browse_health_records_intro" msgid="1611488691642390523">"Esto incluye todos los registros de salud que se sincronizaron y agregaron a Health Connect. Es posible que no se trate de tu historial médico completo y no incluya una descripción médica de tus registros de salud."</string>
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Esto incluye todos los registros de salud que se sincronizaron y agregaron a Health Connect. Es posible que no se trate de tu historia clínica completa y no incluya una descripción médica de tus registros de salud."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Todos los registros de salud"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"todos los registros de salud"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Escribir todos los registros de salud"</string>
     <string name="allergies_intolerances_uppercase_label" msgid="2458552115947636884">"Alergias"</string>
     <string name="allergies_intolerances_lowercase_label" msgid="5066782073511167288">"alergias"</string>
     <string name="allergies_intolerances_content_description" msgid="7954532940667325068">"Leer alergias"</string>
-    <string name="conditions_uppercase_label" msgid="5260404343402770877">"Condiciones"</string>
-    <string name="conditions_lowercase_label" msgid="2678248918552246997">"condiciones"</string>
+    <string name="conditions_uppercase_label" msgid="5260404343402770877">"Afecciones"</string>
+    <string name="conditions_lowercase_label" msgid="2678248918552246997">"afecciones"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Leer condiciones"</string>
     <string name="vaccines_uppercase_label" msgid="1101176371071123187">"Vacunas"</string>
     <string name="vaccines_lowercase_label" msgid="4991324441768127447">"vacunas"</string>
@@ -367,7 +367,7 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Si otorgas acceso de lectura, la app podrá leer los datos nuevos y los de los últimos 30 días"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Si otorgas acceso de lectura, la app podrá leer datos nuevos y antiguos"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"¿Quieres permitir que <xliff:g id="APP_NAME">%1$s</xliff:g> acceda a Health Connect?"</string>
-    <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"¿Quieres permitir que <xliff:g id="APP_NAME">%1$s</xliff:g> acceda a datos antiguos de actividad física y bienestar?"</string>
+    <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"¿Quieres permitir que <xliff:g id="APP_NAME">%1$s</xliff:g> acceda a datos de actividad física y bienestar?"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"Consulta cómo <xliff:g id="APP_NAME">%1$s</xliff:g> administra tus datos en su <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"política de privacidad"</string>
     <string name="medical_request_header" msgid="2300521519021510027">"¿Quieres permitir que <xliff:g id="APP_NAME">%1$s</xliff:g> acceda a tus registros de salud?"</string>
@@ -423,7 +423,7 @@
     <string name="no_apps_allowed" msgid="5794833581324128108">"No se otorgó permiso a ninguna app"</string>
     <string name="no_apps_denied" msgid="743327680286446017">"No se rechazó permiso a ninguna app"</string>
     <string name="permissions_disconnect_all_dialog_title" msgid="27474286046207122">"¿Quieres quitar el acceso a todas las apps?"</string>
-    <string name="permissions_disconnect_all_dialog_message" msgid="3151109627457270499">"Ninguna de las apps podrá acceder a Health Connect ni agregar datos nuevos en ella. No se borrarán los datos existentes.\n\nEsto no afecta los otros permisos que puede tener esta app, como a la ubicación, la cámara o el micrófono."</string>
+    <string name="permissions_disconnect_all_dialog_message" msgid="3151109627457270499">"Ninguna de las apps podrá acceder a Health Connect ni agregar datos nuevos a ella. No se borrarán los datos existentes.\n\nEsto no afecta los otros permisos que puede tener esta app, como a la ubicación, la cámara o el micrófono."</string>
     <string name="permissions_disconnect_all_dialog_disconnect" msgid="2134136493310257746">"Quitar todo"</string>
     <string name="manage_permissions_manage_app_header" msgid="6356348062088358761">"Administrar app"</string>
     <string name="see_app_data" msgid="3951030076195119476">"Ver datos de la app"</string>
@@ -541,10 +541,8 @@
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect almacena tus datos de salud y actividad física, lo que te brinda una manera simple de sincronizar las diferentes apps en tu dispositivo"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect almacena y sincroniza tus datos de salud y actividad física de diferentes apps.\n\n"<b>"Datos de actividad física y bienestar,"</b>" incluidos los de sesiones de ejercicio, pasos, nutrición, sueño y mucho más\n\n"<b>"Registros de salud,"</b>" incluidos los de vacunas, resultados de laboratorio y mucho más"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Con Health Connect, puedes hacer lo siguiente:"</string>
-    <!-- no translation found for share_data_text (6898398345784931678) -->
-    <skip />
-    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
-    <skip />
+    <string name="share_data_text" msgid="6898398345784931678"><b>"Comparte datos con tus apps"</b>\n"Elige los datos que cada app puede leer o escribir con Health Connect"</string>
+    <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"Administra tu configuración y privacidad"</b>\n"Cambia los permisos de la app y administra los datos en cualquier momento"</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Atrás"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Comenzar"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Borrar datos"</string>
@@ -1125,7 +1123,7 @@
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Ver en la tienda de aplicaciones"</string>
     <string name="lock_screen_banner_title" msgid="5384381892985739755">"Establece un bloqueo de pantalla"</string>
     <string name="lock_screen_banner_content" msgid="3392527073622152481">"Para proteger mejor tus datos de salud, establece un PIN, un patrón o una contraseña para este dispositivo"</string>
-    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Configurar bloqueo de pantalla"</string>
+    <string name="lock_screen_banner_button" msgid="2537090011380728122">"Establecer bloqueo de pantalla"</string>
     <string name="select_all" msgid="837499881590001166">"Seleccionar todo"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Las apps conectadas ya no podrán leer estos datos de Health Connect"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"Marcado"</string>
@@ -1164,9 +1162,9 @@
     <string name="request_permissions_allow_all_the_time" msgid="4081502779872893569">"Permitir todo el tiempo"</string>
     <string name="request_permissions_allow_selected" msgid="218527615680495438">"Permitir selección"</string>
     <string name="request_permissions_while_using_the_app" msgid="5155929974398889727">"Mientras la app está en uso"</string>
-    <string name="request_permissions_deny_all" msgid="4123735770293545320">"Rechazar todos"</string>
-    <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"¿Quieres permitir que <xliff:g id="APP_NAME">%1$s</xliff:g> acceda a datos antiguos de actividad física y bienestar?"</string>
-    <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> solicitó acceso a <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nElige permitir el control total o individual de los datos."</string>
+    <string name="request_permissions_deny_all" msgid="4123735770293545320">"Rechazar todo"</string>
+    <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"¿Quieres permitir que <xliff:g id="APP_NAME">%1$s</xliff:g> acceda a datos de actividad física y bienestar?"</string>
+    <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> solicitó acceso a <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nElige si quieres dar todos los permisos o controlarlos individualmente."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"¿Quieres permitir que <xliff:g id="APP_NAME">%1$s</xliff:g> acceda a <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"Actividad física y bienestar"</string>
     <string name="view_permissions_all_the_time" msgid="6899702815770193290">"todo el tiempo"</string>
@@ -1179,7 +1177,7 @@
     <string name="give_permission_prompt" msgid="5788144216023065504">"Estos permisos le otorgan a <xliff:g id="APP_NAME">%1$s</xliff:g> acceso a los datos de los sensores de tu dispositivo."</string>
     <string name="allowed_apps_count" msgid="2289260267605628310">"Apps con permiso: <xliff:g id="NUMBER_0">%1$d</xliff:g> de <xliff:g id="OTHER_NUMBER">%2$d</xliff:g>"</string>
     <string name="no_apps_requesting" msgid="8088684445910698363">"No hay apps que soliciten"</string>
-    <string name="allowed" msgid="4158456017482263737">"Permitido"</string>
+    <string name="allowed" msgid="4158456017482263737">"Con permiso"</string>
     <string name="not_allowed" msgid="6092523505093372147">"No se permite"</string>
     <string name="access_sensor_note" msgid="7949933977197789634">"Las apps que tienen este permiso pueden acceder a los datos de <xliff:g id="DATA_TYPE">%s</xliff:g> de los sensores de tu dispositivo."</string>
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"¿Quieres quitar el acceso a <xliff:g id="DATA_TYPE">%s</xliff:g> para todas las apps de tu reloj?"</string>
