--- a/apk/res/values-fa/strings.xml
+++ b/apk/res/values-fa/strings.xml
@@ -541,10 +541,8 @@
     <string name="onboarding_description" msgid="3479157507808350452">"‏Health Connect داده‌های سلامتی و تناسب اندام شما را ذخیره می‌کند و روشی ساده برای همگام‌سازی برنامه‌های مختلف دستگاه دراختیارتان می‌گذارد"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"‫‫Health Connect داده‌های سلامتی و تناسب اندام شما را از برنامه‌های مختلف ذخیره و همگام‌سازی می‌کند.\n\n"<b>"داده‌های تناسب اندام و تندرستی،"</b>" ازجمله جلسه‌های تمرین، تعداد قدم‌ها، تغذیه، خواب، و غیره\n\n"<b>"سابقه سلامتی،"</b>" ازجمله واکسن‌ها، نتایج آزمایش، و غیره"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"با Health Connect می‌توانید کارهای زیر را انجام دهید"</string>
-    <!-- no translation found for share_data_text (6898398345784931678) -->
-    <skip />
-    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
-    <skip />
+    <string name="share_data_text" msgid="6898398345784931678"><b>"هم‌رسانی داده با برنامه‌ها"</b>\n"می‌توانید داده‌هایی را که هر برنامه اجازه دارد در Health Connect بخواند یا بنویسد انتخاب کنید"</string>
+    <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"مدیریت تنظیمات و حریم خصوصی"</b>\n"می‌توانید در هر زمانی اجازه‌های برنامه را تغییر دهید و داده‌هایتان را مدیریت کنید"</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"برگشتن"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"شروع"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"حذف داده"</string>
@@ -1039,7 +1037,7 @@
     <string name="exercise_permission_dialog_disable_summary" msgid="397599718182778347">"برای فعال شدن مسیرهای تمرین، <xliff:g id="APP_NAME">%1$s</xliff:g> به دسترسی تمرین نیاز دارد"</string>
     <string name="exercise_permission_dialog_positive_button" msgid="4545939654888655556">"بله"</string>
     <string name="exercise_permission_dialog_negative_button" msgid="7433304732406274998">"نه"</string>
-    <string name="back_button" msgid="780519527385993407">"برگشت"</string>
+    <string name="back_button" msgid="780519527385993407">"برگشتن"</string>
     <string name="loading" msgid="2526615755685950317">"درحال بار کردن…"</string>
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"یکپارچه‌سازی درحال انجام است"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"‫Health Connect درحال ادغام شدن با سیستم Android است.\n\nممکن است مدتی طول بکشد تا داده‌ها و اجازه‌ها منتقل شوند."</string>
@@ -1180,7 +1178,7 @@
     <string name="allowed_apps_count" msgid="2289260267605628310">"‫<xliff:g id="NUMBER_0">%1$d</xliff:g> برنامه از <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> برنامه مجاز است"</string>
     <string name="no_apps_requesting" msgid="8088684445910698363">"برنامه‌ای درخواست نکرده است"</string>
     <string name="allowed" msgid="4158456017482263737">"مجاز"</string>
-    <string name="not_allowed" msgid="6092523505093372147">"مجاز نبودن"</string>
+    <string name="not_allowed" msgid="6092523505093372147">"مجاز نیست"</string>
     <string name="access_sensor_note" msgid="7949933977197789634">"برنامه‌های دارای این اجازه می‌توانند به داده‌های <xliff:g id="DATA_TYPE">%s</xliff:g> از حسگرهای دستگاهتان دسترسی داشته باشند."</string>
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"دسترسی به <xliff:g id="DATA_TYPE">%s</xliff:g> برای همه برنامه‌های روی ساعت برداشته شود؟"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"علامت تأیید"</string>
