--- a/apk/res/values-is/strings.xml
+++ b/apk/res/values-is/strings.xml
@@ -541,10 +541,8 @@
     <string name="onboarding_description" msgid="3479157507808350452">"Heilsutenging varðveitir heilsu- og hreystigögnin þín og gefur þér kost á að samstilla ýmis forrit í tækinu þínu á einfaldan hátt"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Heilsutenging vistar og samstillir heilsu- og hreystigögnin þín úr mismunandi forritum.\n\n"<b>"Heilsu- og hreystigögn,"</b>" þ.m.t. æfingalotur, skref, næring, svefn og fleira\n\n"<b>"Heilsufarsgögn,"</b>" þ.m.t. bólusetningar, rannsóknarniðurstöður og fleira"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Með Heilsutengingu er hægt að"</string>
-    <!-- no translation found for share_data_text (6898398345784931678) -->
-    <skip />
-    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
-    <skip />
+    <string name="share_data_text" msgid="6898398345784931678"><b>"Deildu gögnum með forritum"</b>\n"Veldu hvaða gögn hvert forrit getur lesið eða skrifað yfir í Heilsutengingu"</string>
+    <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"Stjórnaðu stillingum og persónuvernd"</b>\n"Breyttu heimildum forrita og stjórnaðu gögnunum þínum hvenær sem er"</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Til baka"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Byrja"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Eyða gögnum"</string>
@@ -1167,7 +1165,7 @@
     <string name="request_permissions_deny_all" msgid="4123735770293545320">"Hafna öllu"</string>
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"Veita <xliff:g id="APP_NAME">%1$s</xliff:g> aðgang að gögnum um hreysti og vellíðan?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> biður um aðgang að <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nVeldu að leyfa allt eða stjórnaðu þeim hverju fyrir sig."</string>
-    <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Viltu veita <xliff:g id="APP_NAME">%1$s</xliff:g> aðgang að <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
+    <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Viltu veita <xliff:g id="APP_NAME">%1$s</xliff:g> aðgang að „<xliff:g id="DATA_TYPE">%2$s</xliff:g>“?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"Hreysti og vellíðan"</string>
     <string name="view_permissions_all_the_time" msgid="6899702815770193290">"hvenær sem er"</string>
     <string name="view_permissions_while_in_use" msgid="2031627107397429473">"á meðan forritið er í notkun"</string>
