--- a/apk/res/values-iw/strings.xml
+++ b/apk/res/values-iw/strings.xml
@@ -54,7 +54,7 @@
     <string name="read_data_access_label" msgid="8968758932021241976">"קריאה: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="write_data_access_label" msgid="105976369853871061">"הרשאת כתיבה ועדכון של נתונים: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="separator" msgid="5521285473288943819">", "</string>
-    <string name="manage_permissions" msgid="8394221950712608160">"ניהול הרשאות"</string>
+    <string name="manage_permissions" msgid="8394221950712608160">"ניהול ההרשאות"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"זמן: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"פעילות"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"פעילות"</string>
@@ -136,7 +136,7 @@
     <string name="history_read_access_description" msgid="800722432229526128">"האפליקציה הזו יכולה לגשת לנתונים של Health Connect שנוספו לפני <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_access_description_fallback" msgid="4151538305657852010">"האפליקציה הזו יכולה לגשת לכל הנתונים הקודמים של Health Connect"</string>
     <string name="history_read_medical_access_read_warning" msgid="8878271647163400440">"האפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> לא קוראת בשלב זה נתונים של אימוני כושר כי הרשאת הקריאה לא מופעלת"</string>
-    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"לאפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> כבר יש גישה לנתונים קודמים של סיכום המצב הבריאותי שלך. כדי לשנות את ההגדרה, צריך להשבית את ההרשאות לסיכום המצב הבריאותי מהאפליקציה הזו"</string>
+    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"לאפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> כבר יש גישה לנתונים קודמים של סיכום המצב הבריאותי שלך. כדי לשנות את ההגדרה, צריך להשבית את ההרשאות של סיכום המצב הבריאותי מהאפליקציה הזו"</string>
     <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"שינוי ההרשאות של סיכום המצב הבריאותי"</string>
     <string name="additional_access_combined_footer" msgid="5967785355544362840">"צריך לתת הרשאת קריאה אחת לפחות כדי לאפשר לאפליקציה הזו גישה לנתונים קודמים או גישה ברקע"</string>
     <string name="additional_access_background_footer" msgid="1638739578431818525">"צריך לתת הרשאת קריאה אחת לפחות כדי לאפשר לאפליקציה הזו גישה ברקע"</string>
@@ -412,13 +412,13 @@
     <string name="raw_fhir_value" msgid="8627152854130338531">"‫<xliff:g id="PREFIX">%1$s</xliff:g>:‏ <xliff:g id="VALUE">%2$s</xliff:g>."</string>
     <string name="raw_fhir_content_description" msgid="1491420802097635439">"קוד המקור המפורט: <xliff:g id="SOURCE_CODE">%1$s</xliff:g>"</string>
     <string name="health_permission_header_description" msgid="7497601695462373927">"אפליקציות עם ההרשאה הזו יכולות לקרוא ולכתוב את נתוני הבריאות והכושר שלך."</string>
-    <string name="connected_apps_text" msgid="1177626440966855831">"ניתן לקבוע לאילו אפליקציות תהיה הרשאת גישה לנתונים שמאוחסנים ב-Health Connect. יש להקיש על אחת האפליקציות כדי לבדוק את הנתונים שהיא יכולה לכתוב או לקרוא."</string>
+    <string name="connected_apps_text" msgid="1177626440966855831">"ניתן לקבוע לאילו אפליקציות תהיה הרשאת גישה לנתונים שמאוחסנים ב-Health Connect. יש ללחוץ על אחת האפליקציות כדי לבדוק את הנתונים שהיא יכולה לכתוב או לקרוא."</string>
     <string name="connected_apps_section_title" msgid="2415288099612126258">"הגישה מותרת"</string>
     <string name="not_connected_apps_section_title" msgid="452718769894103039">"הגישה אסורה"</string>
     <string name="needs_updating_apps_section_title" msgid="8561510523049921199">"נדרש עדכון"</string>
     <string name="settings_and_help_header" msgid="5749710693017621168">"הגדרות ועזרה"</string>
-    <string name="disconnect_all_apps" msgid="748945115977534726">"הסרת הרשאת הגישה לכל האפליקציות"</string>
-    <string name="manage_permissions_read_header" msgid="2031153753057983683">"אישור לקרוא"</string>
+    <string name="disconnect_all_apps" msgid="748945115977534726">"הסרת הרשאת הגישה של כל האפליקציות"</string>
+    <string name="manage_permissions_read_header" msgid="2031153753057983683">"אישור לקרוא נתונים"</string>
     <string name="manage_permissions_write_header" msgid="6876806848658168370">"אישור לכתוב"</string>
     <string name="no_apps_allowed" msgid="5794833581324128108">"אין אפליקציות שקיבלו הרשאת גישה"</string>
     <string name="no_apps_denied" msgid="743327680286446017">"אין אפליקציות שסורב לתת להן גישה"</string>
@@ -434,10 +434,10 @@
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"האפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> יכולה לקרוא נתונים שנוספו אחרי <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"כדי לנהל הרשאות Android אחרות שיש לאפליקציה הזו גישה אליהן, צריך לעבור אל \'הגדרות\' &gt; \'אפליקציות\'"</string>
     <string name="manage_permissions_rationale" msgid="2780008055185441703">"במדיניות הפרטיות של המפתח מוסבר איך האפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> מטפלת בנתונים שלך"</string>
-    <string name="other_android_permissions_content_description" msgid="2261431010048933820">"כדי לנהל הרשאות Android אחרות שיש לאפליקציה הזו גישה אליהן, עוברים ל\'הגדרות\' ומקישים על \'אפליקציות\'"</string>
+    <string name="other_android_permissions_content_description" msgid="2261431010048933820">"כדי לנהל הרשאות Android אחרות שיש לאפליקציה הזו גישה אליהן, עוברים ל\'הגדרות\' ולוחצים על \'אפליקציות\'"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"לעיון במדיניות הפרטיות"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"הייתה גישה ב-24 השעות האחרונות"</string>
-    <string name="app_access_title" msgid="7137018424885371763">"גישה לאפליקציות"</string>
+    <string name="app_access_title" msgid="7137018424885371763">"הנתונים שהאפליקציה יכולה לגשת אליהם"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"כרגע אין לך אפליקציות תואמות מותקנות"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"הרשאת גישה נוספת"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"נתונים קודמים, נתוני רקע"</string>
@@ -530,7 +530,7 @@
     <string name="import_next_button" msgid="5706322508691854289">"הבא"</string>
     <string name="import_source_location_title" msgid="4444467438013749461">"מהיכן לייבא"</string>
     <string name="import_invalid_storage" msgid="341798262315495399">"צריך לבחור אפליקציית אחסון בענן לייבוא הנתונים"</string>
-    <string name="export_import_tap_to_choose_account" msgid="5016799636886709580">"כדי לבחור חשבון צריך להקיש עליו"</string>
+    <string name="export_import_tap_to_choose_account" msgid="5016799636886709580">"כדי לבחור חשבון צריך ללחוץ עליו"</string>
     <string name="export_import_choose_account_title" msgid="1047021319012735232">"בחירת חשבון"</string>
     <string name="export_import_choose_account_cancel_button" msgid="7975616126298263479">"ביטול"</string>
     <string name="export_import_choose_account_done_button" msgid="8450305343787469429">"סיום"</string>
@@ -541,10 +541,8 @@
     <string name="onboarding_description" msgid="3479157507808350452">"אפליקציית Health Connect מאחסנת את נתוני הבריאות והכושר שלך, ומאפשרת לך לסנכרן בקלות את האפליקציות השונות במכשיר"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"אפליקציית Health Connect מאחסנת ומסנכרנת את נתוני הבריאות והכושר שלך מאפליקציות שונות.\n\n"<b>"נתוני כושר ורווחה אישית,"</b>" כולל אימוני כושר, צעדים, תזונה, שינה ועוד\n\n"<b>"סיכומי מצב בריאותי,"</b>" כולל חיסונים, תוצאות של בדיקות מעבדה ועוד"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"מה אפשר לעשות עם Health Connect:"</string>
-    <!-- no translation found for share_data_text (6898398345784931678) -->
-    <skip />
-    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
-    <skip />
+    <string name="share_data_text" msgid="6898398345784931678"><b>"שיתוף נתונים עם האפליקציות שלך"</b>\n"אפשר לבחור את סוגי הנתונים שכל אפליקציה יכולה לקרוא או לכתוב ב-Health Connect"</string>
+    <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"ניהול ההגדרות והפרטיות"</b>\n"אפשר לשנות את ההרשאות שניתנות לאפליקציה ולנהל את הנתונים שלך בכל שלב"</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"הקודם"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"קדימה, מתחילים"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"מחיקת נתונים"</string>
@@ -1006,9 +1004,9 @@
     <string name="action_drag_label_move_down" msgid="3448000958912947588">"העברה למטה"</string>
     <string name="action_drag_label_move_top" msgid="5114033774108663548">"העברה לראש הרשימה"</string>
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"העברה לתחתית הרשימה"</string>
-    <string name="reorder_button_content_description" msgid="2685032520710743533">"לחצן לגרירה וסידור מחדש של <xliff:g id="SELECTED_APP">%s</xliff:g> ברשימת העדיפויות של האפליקציות"</string>
-    <string name="remove_button_content_description" msgid="6170490900032612048">"לחצן להסרת <xliff:g id="SELECTED_APP">%s</xliff:g> מרשימת העדיפויות של האפליקציות"</string>
-    <string name="reorder_button_action_description" msgid="5197462036756192214">"כדי לשנות את הסדר, מקישים הקשה כפולה וגוררים"</string>
+    <string name="reorder_button_content_description" msgid="2685032520710743533">"כפתור לגרירה וסידור מחדש של <xliff:g id="SELECTED_APP">%s</xliff:g> ברשימת העדיפויות של האפליקציות"</string>
+    <string name="remove_button_content_description" msgid="6170490900032612048">"כפתור להסרת <xliff:g id="SELECTED_APP">%s</xliff:g> מרשימת העדיפויות של האפליקציות"</string>
+    <string name="reorder_button_action_description" msgid="5197462036756192214">"כדי לשנות את הסדר, לוחצים לחיצה כפולה וגוררים"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"כושר גופני, איכות חיים"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"הרשאות"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"Health Connect, נתוני בריאות, קטגוריות בריאות, גישה לנתונים, פעילות, מדדים גופניים, מעקב אחר המחזור, תזונה, שינה, סימנים חיוניים"</string>
@@ -1061,10 +1059,10 @@
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"כדי שנתוני Health Connect שלך יישמרו, עליך להשלים זאת בתוך <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_button" msgid="2255148549862208047">"המשך"</string>
     <string name="migration_paused_notification_title" msgid="4368414714202113077">"השילוב מושהה"</string>
-    <string name="migration_paused_notification_content" msgid="1950511270109811771">"תהליך השילוב של Health Connect במערכת Android עוד לא הסתיים. צריך להקיש כדי להמשיך"</string>
+    <string name="migration_paused_notification_content" msgid="1950511270109811771">"תהליך השילוב של Health Connect במערכת Android עוד לא הסתיים. צריך ללחוץ כדי להמשיך"</string>
     <string name="resume_migration_banner_title" msgid="4443957114824045317">"המשך השילוב"</string>
-    <string name="resume_migration_banner_description" msgid="6236230413670826036">"יש להקיש כדי להמשיך בשילוב של Health Connect עם מערכת Android. כדי שהנתונים שלך יישמרו, עליך להשלים זאת בתוך <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
-    <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"יש להקיש כדי להמשיך בשילוב של Health Connect עם מערכת Android."</string>
+    <string name="resume_migration_banner_description" msgid="6236230413670826036">"יש ללחוץ כדי להמשיך בשילוב של Health Connect עם מערכת Android. כדי שהנתונים שלך יישמרו, עליך להשלים זאת בתוך <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
+    <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"יש ללחוץ כדי להמשיך בשילוב של Health Connect עם מערכת Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"המשך"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"נדרש עדכון לאפליקציה"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"צריך לעדכן את אפליקציית <xliff:g id="APP_NAME">%1$s</xliff:g> כדי להמשיך בסנכרון עם Health Connect. יכול להיות שהעדכונים לא זמינים לכל האפליקציות."</string>
