--- a/apk/res/values-ka/strings.xml
+++ b/apk/res/values-ka/strings.xml
@@ -541,10 +541,8 @@
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect ინახავს თქვენს ჯანმრთელობასა და ფიტნესთან დაკავშირებულ მონაცემებს და გაძლევთ თქვენს მოწყობილობაში სხვადასხვა აპის მარტივი სინქრონიზაციის საშუალებას."</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect სხვადასხვა აპებიდან ინახავს და ახდენს თქვენი ჯანმრთელობის და ფიტნესის მონაცემების სინქრონიზაციას.\n\n"<b>"ფიტნესის და კეთილდღეობის მონაცემები,"</b>" ვარჯიშის სესიების, ნაბიჯების, კვების, ძილის და სხვა ინფორმაციის ჩათვლით\n\n"<b>"ჯანმრთელობის ჩანაწერები,"</b>" ვაქცინების, ლაბორატორიული შედეგების და სხვა ინფორმაციის ჩათვლით"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"რა შეგიძლიათ Health Connect-ის საშუალებით"</string>
-    <!-- no translation found for share_data_text (6898398345784931678) -->
-    <skip />
-    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
-    <skip />
+    <string name="share_data_text" msgid="6898398345784931678"><b>"მონაცემების გაზიარება თქვენს აპებთან"</b>\n"აირჩიეთ მონაცემები, რომლის წაკითხვა ან ჩაწერაც შეუძლია თითოეულ აპს Health Connect-ში"</string>
+    <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"თქვენი პარამეტრებისა და კონფიდენციალურობის მართვა"</b>\n"შეცვალეთ აპის ნებართვები და მართეთ თქვენი მონაცემები ნებისმიერ დროს"</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"უკან დაბრუნება"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"დაწყება"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"მონაცემების წაშლა"</string>
