--- a/apk/res/values-kk/strings.xml
+++ b/apk/res/values-kk/strings.xml
@@ -37,7 +37,7 @@
     <string name="connected_apps_button_no_permissions_subtitle" msgid="1651994862419752908">"Ешқандай"</string>
     <string name="entry_details_title" msgid="590184849040247850">"Енгізілген дерек мәліметтері"</string>
     <string name="browse_data_title" msgid="5232691805953326097">"Деректерді шолу"</string>
-    <string name="browse_data_subtitle" msgid="7025164374898103993">"Оларды пайдалана алатын деректер мен қолданбаларды қарау"</string>
+    <string name="browse_data_subtitle" msgid="7025164374898103993">"Деректерді және оларды пайдалана алатын қолданбаларды көру"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"Автоматты түрде жою, деректер көзі, сақтық көшірме жасау және қалпына келтіру"</string>
     <string name="backup_title" msgid="211503191266235085">"Сақтық көшірме жасау"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"Дереккөздер және басымдық"</string>
@@ -309,7 +309,7 @@
     <string name="resting_heart_rate_read_content_description" msgid="1068160055773401020">"Тынығу кезіндегі жүрек қағысы деректерін оқу"</string>
     <string name="resting_heart_rate_write_content_description" msgid="8848198128082739995">"Тынығу кезіндегі жүрек қағысы деректерін жазу"</string>
     <string name="skin_temperature_uppercase_label" msgid="4880306019368461268">"Тері температурасы"</string>
-    <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"Тері температурасы"</string>
+    <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"тері температурасы"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Тері температурасын оқу"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Тері температурасын жазу"</string>
     <string name="browse_health_records_intro" msgid="1611488691642390523">"Бұған Health Connect қолданбасымен синхрондалған және оған қосылған денсаулық туралы бүкіл ақпарат кіреді. Бұны толық медициналық журналыңыз деп есептеуге болмайды және онда денсаулық туралы ақпаратыңыздың медициналық сипаттамасы жоқ."</string>
@@ -353,7 +353,7 @@
     <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"тіршілік үшін маңызды көрсеткіштер"</string>
     <string name="vital_signs_content_description" msgid="914944352640528612">"Тіршілік үшін маңызды көрсеткіштерді оқу"</string>
     <string name="mindfulness_uppercase_label" msgid="7678646522566275472">"Ой сергектігі"</string>
-    <string name="mindfulness_lowercase_label" msgid="5184488636180881614">"ой сергектігі"</string>
+    <string name="mindfulness_lowercase_label" msgid="5184488636180881614">"Ой сергектігі"</string>
     <string name="mindfulness_read_content_description" msgid="739187536826062524">"Ой сергектігі сеансының деректерін оқу"</string>
     <string name="mindfulness_write_content_description" msgid="7925112426563398421">"Ой сергектігі сеансының деректерін жазу"</string>
     <string name="read_permission_category" msgid="6002099618259628632">"\"<xliff:g id="APP_NAME">%1$s</xliff:g>\" қолданбасына оқуға рұқсат беру"</string>
@@ -541,10 +541,8 @@
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect денсаулық және фитнес деректерін сақтап, құрылғыда әртүрлі қолданбаны синхрондаудың қарапайым жолын ұсынады."</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect әртүрлі қолданбалардағы денсаулық және фитнес деректерін сақтайды және синхрондайды.\n\n"<b>"Фитнес және сауықтыру деректері,"</b>" соның ішінде жаттығулар, қадамдар, тамақтану, ұйқы және т.б.\n\n"<b>"Денсаулық туралы ақпарат,"</b>" соның ішінде вакциналар, зертханалық нәтижелер және т.б."</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Health Connect қолданбасымен мына әрекеттерді орындай аласыз:"</string>
-    <!-- no translation found for share_data_text (6898398345784931678) -->
-    <skip />
-    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
-    <skip />
+    <string name="share_data_text" msgid="6898398345784931678"><b>"Деректерді қолданбалармен бөлісу"</b>\n"Әр қолданба оқи алатын немесе Health Connect қолданбасына жаза алатын деректерді таңдауға болады."</string>
+    <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"Параметрлер мен құпиялықты басқару"</b>\n"Кез келген уақытта қолданба рұқсаттарын өзгертуге және деректерді басқаруға болады."</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Артқа"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Бастау"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Деректерді жою"</string>
@@ -1185,7 +1183,7 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Сағатыңызда барлық қолданба үшін <xliff:g id="DATA_TYPE">%s</xliff:g> пайдалану рұқсатын өшіру керек пе?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Құсбелгі"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Айқас белгі"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"Қазір <xliff:g id="APP_NAME">%1$s</xliff:g> фитнес пен сауықтыру деректерін (<xliff:g id="ALLOW_MODE">%2$s</xliff:g> режимінде) пайдалана алады."</string>
+    <string name="current_allow_mode" msgid="6716206063077569218">"<xliff:g id="APP_NAME">%1$s</xliff:g> қолданбасы фитнес пен сауықтыру деректеріне <xliff:g id="ALLOW_MODE">%2$s</xliff:g> кіре алады."</string>
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"<xliff:g id="APP_NAME">%1$s</xliff:g> қолданбасына фитнес пен сауықтыру деректерін пайдалануға біржола рұқсат берілсін бе?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> қолданбасының мынадай деректерді пайдалануға рұқсаты бар: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Фитнес пен сауықтыру дерегін пайдалану рұқсаттарын басқару"</string>
