--- a/apk/res/values-lo/strings.xml
+++ b/apk/res/values-lo/strings.xml
@@ -541,10 +541,8 @@
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect ຈະຈັດເກັບຂໍ້ມູນສຸຂະພາບ ແລະ ການອອກກຳລັງກາຍຂອງທ່ານ, ເຊິ່ງເຮັດໃຫ້ທ່ານຊິ້ງຂໍ້ມູນແອັບຕ່າງໆຢູ່ອຸປະກອນຂອງທ່ານໄດ້ຢ່າງງ່າຍດາຍ"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect ຈະຈັດເກັບ ແລະ ຊິ້ງຂໍ້ມູນດ້ານສຸຂະພາບ ແລະ ການອອກກຳລັງກາຍຂອງທ່ານຈາກແອັບຕ່າງໆ.\n\n"<b>"ຂໍ້ມູນການອອກກຳລັງກາຍ ແລະ ຄວາມແຂງແຮງສົມບູນ,"</b>" ຮວມທັງເຊດຊັນການອອກກຳລັງກາຍ, ຈຳນວນກ້າວ, ໂພຊະນາການ, ການນອນຫຼັບ ແລະ ອື່ນໆ\n\n"<b>"ຂໍ້ມູນສຸຂະພາບ,"</b>" ຮວມທັງວັກຊີນ, ຜົນກວດ ແລະ ອື່ນໆ"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Health Connect ຊ່ວຍໃຫ້ທ່ານເຮັດສິ່ງຕໍ່ໄປນີ້ໄດ້"</string>
-    <!-- no translation found for share_data_text (6898398345784931678) -->
-    <skip />
-    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
-    <skip />
+    <string name="share_data_text" msgid="6898398345784931678"><b>"ແບ່ງປັນຂໍ້ມູນກັບແອັບຕ່າງໆຂອງທ່ານ"</b>\n"ເລືອກຂໍ້ມູນທີ່ແຕ່ລະແອັບຈະສາມາດອ່ານ ຫຼື ຂຽນໃສ່ໃນ Health Connect ໄດ້"</string>
+    <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"ຈັດການການຕັ້ງຄ່າ ແລະ ຄວາມເປັນສ່ວນຕົວຂອງທ່ານ"</b>\n"ປ່ຽນການອະນຸຍາດແອັບ ແລະ ຈັດການຂໍ້ມູນຂອງທ່ານໄດ້ທຸກເວລາ"</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"ກັບຄືນ"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"ເລີ່ມຕົ້ນການນຳໃຊ້"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"ລຶບຂໍ້ມູນ"</string>
