--- a/apk/res/values-ms/strings.xml
+++ b/apk/res/values-ms/strings.xml
@@ -114,7 +114,7 @@
     <string name="background_read_combined_request_title" msgid="4184649296697480520">"Akses data pada latar"</string>
     <string name="background_read_combined_request_description" msgid="2423480522986545286">"Benarkan apl ini mengakses data Health Connect apabila anda tidak menggunakan apl"</string>
     <string name="history_read_medical_combined_request_title" msgid="1262267962861942478">"Akses data kecergasan dan kesejahteraan yang lalu"</string>
-    <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"Benarkan apl ini untuk mengakses data ditambahkan sebelum <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
+    <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"Benarkan apl ini untuk mengakses data yang ditambahkan sebelum <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_medical_combined_request_description_fallback" msgid="3567968660826834911">"Benarkan apl ini untuk mengakses semua data yang lalu"</string>
     <string name="history_read_combined_request_title" msgid="9023811767370482028">"Akses data yang lalu"</string>
     <string name="history_read_combined_request_description" msgid="1437787086896636484">"Benarkan apl ini mengakses data Health Connect yang ditambahkan sebelum <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
@@ -130,7 +130,7 @@
     <string name="background_read_access_title" msgid="4184498185599147117">"Akses data pada latar"</string>
     <string name="background_read_access_description" msgid="2360433029368320323">"Benarkan apl ini mengakses data Health Connect apabila anda tidak menggunakan apl"</string>
     <string name="history_read_medical_access_title" msgid="1375462150672418692">"Akses data kecergasan dan kesejahteraan yang lalu"</string>
-    <string name="history_read_medical_access_description" msgid="5615959269427106141">"Benarkan apl ini untuk mengakses data ditambahkan sebelum <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
+    <string name="history_read_medical_access_description" msgid="5615959269427106141">"Benarkan apl ini untuk mengakses data yang ditambahkan sebelum <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
     <string name="history_read_medical_access_description_fallback" msgid="3888547064992673535">"Benarkan apl ini untuk mengakses semua data yang lalu"</string>
     <string name="history_read_access_title" msgid="870048398702887144">"Akses data yang lalu"</string>
     <string name="history_read_access_description" msgid="800722432229526128">"Benarkan apl ini mengakses data Health Connect yang ditambahkan sebelum <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
@@ -361,7 +361,7 @@
     <string name="request_permissions_allow" msgid="4201324235711040631">"Benarkan"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"Benarkan semua"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"Jangan benarkan"</string>
-    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"Pilih data yang anda mahu dibaca oleh apl atau tuliskan kepada Health Connect"</string>
+    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"Pilih data yang anda mahu dibaca atau ditulis oleh apl pada Health Connect"</string>
     <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"Pilih data yang anda mahu dibaca oleh apl ini daripada Health Connect"</string>
     <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"Pilih data yang anda mahu ditulis oleh apl ini pada Health Connect"</string>
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Jika anda memberikan akses baca, apl tersebut boleh membaca data baharu dan data dari 30 hari yang lalu"</string>
@@ -541,10 +541,8 @@
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect menyimpan data kesihatan dan kecergasan anda, menyediakan cara yang mudah untuk menyegerakkan pelbagai apl pada peranti anda"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect menyimpan dan menyegerakkan data kesihatan dan kecergasan anda daripada apl yang berbeza.\n\n"<b>"Data kecergasan dan kesejahteraan,"</b>" termasuk sesi senaman, langkah, nutrisi, tidur dan banyak lagi\n\n"<b>"Rekod kesihatan,"</b>" termasuk vaksin, keputusan makmal dan banyak lagi"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Dengan Health Connect, anda boleh"</string>
-    <!-- no translation found for share_data_text (6898398345784931678) -->
-    <skip />
-    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
-    <skip />
+    <string name="share_data_text" msgid="6898398345784931678"><b>"Kongsi data dengan apl anda"</b>\n"Pilih data yang boleh dibaca atau ditulis oleh setiap apl pada Health Connect"</string>
+    <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"Urus tetapan dan privasi anda"</b>\n"Tukar kebenaran apl dan urus data anda pada bila-bila masa"</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Kembali"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Mulakan"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Padamkan data"</string>
