--- a/apk/res/values-or/strings.xml
+++ b/apk/res/values-or/strings.xml
@@ -38,7 +38,7 @@
     <string name="entry_details_title" msgid="590184849040247850">"ଏଣ୍ଟ୍ରି ବିବରଣୀ"</string>
     <string name="browse_data_title" msgid="5232691805953326097">"ଡାଟା ବ୍ରାଉଜ କରନ୍ତୁ"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"ଡାଟା ଦେଖନ୍ତୁ ଏବଂ କେଉଁ ଆପ୍ସ ଏହାକୁ ଆକ୍ସେସ କରିପାରିବ ତାହା ଜାଣନ୍ତୁ"</string>
-    <string name="manage_data_summary" msgid="8537870912521944449">"ସ୍ୱତଃ-ଡିଲିଟ, ଡାଟା ସୋର୍ସ, ବେକଅପ ଏବଂ ରିଷ୍ଟୋର"</string>
+    <string name="manage_data_summary" msgid="8537870912521944449">"ଅଟୋ-ଡିଲିଟ, ଡାଟା ସୋର୍ସ, ବେକଅପ ଏବଂ ରିଷ୍ଟୋର"</string>
     <string name="backup_title" msgid="211503191266235085">"ବେକଅପ ନିଅନ୍ତୁ"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"ଡାଟା ସୋର୍ସ ଏବଂ ପ୍ରାଥମିକତା"</string>
     <string name="set_units_title" msgid="2657822539603758029">"ୟୁନିଟ ସେଟ କରନ୍ତୁ"</string>
@@ -139,7 +139,7 @@
     <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g> ପୂର୍ବରୁ ଆପଣଙ୍କ ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡ ପାଇଁ ଅତୀତର ଡାଟାକୁ ଆକ୍ସେସ କରିପାରିବ। ଏହାକୁ ପରିବର୍ତ୍ତନ କରିବା ପାଇଁ ଏହି ଆପ ନିମନ୍ତେ ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡ ଅନୁମତିଗୁଡ଼ିକୁ ବନ୍ଦ କରନ୍ତୁ"</string>
     <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡ ଅନୁମତିଗୁଡ଼ିକୁ ପରିଚାଳନା କରନ୍ତୁ"</string>
     <string name="additional_access_combined_footer" msgid="5967785355544362840">"ଏହି ଆପ ପାଇଁ ବେକଗ୍ରାଉଣ୍ଡ କିମ୍ବା ପୂର୍ବର ଡାଟା ଆକ୍ସେସ ଚାଲୁ କରିବା ପାଇଁ ଅତି କମରେ ଗୋଟିଏ ପଢ଼ିବାର ଅନୁମତିକୁ ସକ୍ଷମ କରନ୍ତୁ"</string>
-    <string name="additional_access_background_footer" msgid="1638739578431818525">"ଏହି ଆପ ପାଇଁ ପୃଷ୍ଠପଟ ଆକ୍ସେସ ଚାଲୁ କରିବା ପାଇଁ ଅତି କମରେ ଗୋଟିଏ ପଢ଼ିବାର ଅନୁମତିକୁ ସକ୍ଷମ କରନ୍ତୁ"</string>
+    <string name="additional_access_background_footer" msgid="1638739578431818525">"ଏହି ଆପରେ ବେକଗ୍ରାଉଣ୍ଡ ଆକ୍ସେସ ଚାଲୁ କରିବା ପାଇଁ ଅତି କମରେ ଗୋଟିଏ ପଢ଼ିବାର ଅନୁମତିକୁ ସକ୍ଷମ କରନ୍ତୁ"</string>
     <string name="additional_access_history_footer" msgid="5326814559930548467">"ଏହି ଆପ ପାଇଁ ପୂର୍ବର ଡାଟା ଆକ୍ସେସ ଚାଲୁ କରିବା ପାଇଁ ଅତି କମରେ ଗୋଟିଏ ପଢ଼ିବାର ଅନୁମତିକୁ ସକ୍ଷମ କରନ୍ତୁ"</string>
     <string name="historic_access_description" msgid="3309195636349468633">"ଅତୀତର ସମସ୍ତ Health Connect ଡାଟାକୁ ଆକ୍ସେସ କରିବା ପାଇଁ ଏହି ଆପକୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
     <string name="background_read_description" msgid="3203594555849969283">"ଆପଣ ଆପ ବ୍ୟବହାର କରୁନଥିବା ସମୟରେ Health Connect ଡାଟାକୁ ଆକ୍ସେସ କରିବା ପାଇଁ ଏହି ଆପକୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
@@ -320,7 +320,7 @@
     <string name="allergies_intolerances_lowercase_label" msgid="5066782073511167288">"ଆଲର୍ଜି"</string>
     <string name="allergies_intolerances_content_description" msgid="7954532940667325068">"ଆଲର୍ଜି ଅସହିଷ୍ଣୁତା ଡାଟା ପଢ଼ନ୍ତୁ"</string>
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"ଅବସ୍ଥା"</string>
-    <string name="conditions_lowercase_label" msgid="2678248918552246997">"ଅବସ୍ଥା"</string>
+    <string name="conditions_lowercase_label" msgid="2678248918552246997">"ସ୍ୱାସ୍ଥ୍ୟାବସ୍ଥା"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"ଅବସ୍ଥା ପଢ଼ନ୍ତୁ"</string>
     <string name="vaccines_uppercase_label" msgid="1101176371071123187">"ଟୀକା"</string>
     <string name="vaccines_lowercase_label" msgid="4991324441768127447">"ଟୀକା"</string>
@@ -341,7 +341,7 @@
     <string name="pregnancy_lowercase_label" msgid="810439290131044517">"ଗର୍ଭାବସ୍ଥା"</string>
     <string name="pregnancy_content_description" msgid="3436773729243586287">"ଗର୍ଭାବସ୍ଥାର ଡାଟା ପଢ଼ନ୍ତୁ"</string>
     <string name="procedures_uppercase_label" msgid="9176087520132593261">"ପ୍ରକ୍ରିୟା"</string>
-    <string name="procedures_lowercase_label" msgid="5320804313946273234">"ପ୍ରକ୍ରିୟା"</string>
+    <string name="procedures_lowercase_label" msgid="5320804313946273234">"ଚିକିତ୍ସା ପ୍ରକ୍ରିୟା"</string>
     <string name="procedures_content_description" msgid="1086900373141440005">"ପ୍ରକ୍ରିୟାଗୁଡ଼ିକର ଡାଟା ପଢ଼ନ୍ତୁ"</string>
     <string name="social_history_uppercase_label" msgid="4119611299449533999">"ସାମାଜିକ ଇତିହାସ"</string>
     <string name="social_history_lowercase_label" msgid="9027541979445736412">"ସାମାଜିକ ଇତିହାସ"</string>
@@ -370,11 +370,11 @@
     <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"ଫିଟନେସ ଓ ସୁସ୍ଥତା ଡାଟାକୁ ଆକ୍ସେସ କରିବା ପାଇଁ <xliff:g id="APP_NAME">%1$s</xliff:g>କୁ ଅନୁମତି ଦେବେ?"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"<xliff:g id="APP_NAME">%1$s</xliff:g> ତା\'ର <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>ରେ ଆପଣଙ୍କ ଡାଟାକୁ କିପରି ପରିଚାଳନା କରେ ତାହା ଆପଣ ଜାଣିପାରିବେ"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"ଗୋପନୀୟତା ନୀତି"</string>
-    <string name="medical_request_header" msgid="2300521519021510027">"ଆପଣଙ୍କ ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡଗୁଡ଼ିକୁ ଆକ୍ସେସ କରିବା ପାଇଁ <xliff:g id="APP_NAME">%1$s</xliff:g>କୁ ଅନୁମତି ଦିଅନ୍ତୁ?"</string>
+    <string name="medical_request_header" msgid="2300521519021510027">"ଆପଣଙ୍କ ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡଗୁଡ଼ିକୁ ଆକ୍ସେସ କରିବା ପାଇଁ <xliff:g id="APP_NAME">%1$s</xliff:g>କୁ ଅନୁମତି ଦେବେ?"</string>
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"ଯଦି ଆପଣ ଆକ୍ସେସ ଦିଅନ୍ତି, ତେବେ ଆଲର୍ଜି, ଲେବ ଫଳାଫଳ, ଟୀକା ଏବଂ ଆହୁରି ଅନେକ କିଛି ପରି ଡାଟାକୁ ଆପ ପଢ଼ି ଲେଖିପାରିବ\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"ଯଦି ଆପଣ ଆକ୍ସେସ ଦିଅନ୍ତି, ତେବେ ଆଲର୍ଜି, ଲେବ ଫଳାଫଳ, ଟୀକା ଏବଂ ଆହୁରି ଅନେକ କିଛି ପରି ଡାଟାକୁ ଆପ ପଢ଼ିପାରିବ \n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡ ବିଷୟରେ"</string>
-    <string name="medical_request_data_to_share" msgid="6778034304921873317">"ସେୟାର କରିବାକୁ ଥିବା ଡାଟାରେ ଏସବୁ ଅନ୍ତର୍ଭୁକ୍ତ ଅଟେ"</string>
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"ସେୟାର କରିବାକୁ ଥିବା ଡାଟାରେ ଏସବୁ ଅନ୍ତର୍ଭୁକ୍ତ"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"ଯଦି ଆପଣ ଅନୁମତି ଦିଅନ୍ତି, ତେବେ <xliff:g id="APP_NAME">%1$s</xliff:g> ଆପଣଙ୍କ ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡକୁ Health Connect ସହ ସେୟାର କରିପାରେ।"</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"ଆପଣଙ୍କର ବିଭିନ୍ନ ଆପ୍ସ ଏବଂ ସୋର୍ସରୁ ଆପଣଙ୍କ ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡଗୁଡ଼ିକୁ ଗୋଟିଏ ସ୍ଥାନରେ ରଖିବା ପାଇଁ ସିଙ୍କ କରନ୍ତୁ"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"ସବୁ ଅନୁମତିକୁ କାଢ଼ି ଦେବେ?"</string>
@@ -539,12 +539,10 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Play Storeକୁ ଯାଆନ୍ତୁ"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Health Connect ସହ ଆରମ୍ଭ କରନ୍ତୁ"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect ଆପଣଙ୍କ ସ୍ୱାସ୍ଥ୍ୟ ଏବଂ ଫିଟନେସ ଡାଟାକୁ ଷ୍ଟୋର କରେ, ଯାହା ଆପଣଙ୍କ ଡିଭାଇସରେ ବିଭିନ୍ନ ଆପ୍ସ ସିଙ୍କ କରିବାକୁ ଆପଣଙ୍କୁ ଏକ ସହଜ ଉପାୟ ଦେଇଥାଏ"</string>
-    <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect ବିଭିନ୍ନ ଆପ୍ସରୁ ଆପଣଙ୍କ ସ୍ୱାସ୍ଥ୍ୟ ଏବଂ ଫିଟନେସ ଡାଟାକୁ ଷ୍ଟୋର ଓ ସିଙ୍କ କରେ।\n\n"<b>"ବ୍ୟାୟାମ ସେସନ, ଷ୍ଟେପ, ନ୍ୟୁଟ୍ରିସନ, ଶୋଇବା ଏବଂ ଆହୁରି ଅନେକ କିଛି ସମେତ"</b>" ଫିଟନେସ ଏବଂ ସୁସ୍ଥତା ଡାଟା\n\n"<b>"ଟୀକା, ଲେବ ଫଳାଫଳ ଏବଂ ଆହୁରି ଅନେକ କିଛି ସମେତ"</b>" ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡଗୁଡ଼ିକ"</string>
+    <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect ବିଭିନ୍ନ ଆପ୍ସରୁ ଆପଣଙ୍କ ସ୍ୱାସ୍ଥ୍ୟ ଏବଂ ଫିଟନେସ ଡାଟାକୁ ଷ୍ଟୋର ଓ ସିଙ୍କ କରେ।\n\n"<b>"ଫିଟନେସ ଏବଂ ସୁସ୍ଥତା ଡାଟା,"</b>" ଯେଉଁଥିରେ ବ୍ୟାୟାମ ସେସନ, ଷ୍ଟେପ, ନ୍ୟୁଟ୍ରିସନ, ଶୋଇବା ଏବଂ ଆହୁରି ଅନେକ କିଛି ଅନ୍ତର୍ଭୁକ୍ତ\n\n"<b>"ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡ,"</b>" ଯେଉଁଥିରେ ଟୀକା, ଲେବ ଫଳାଫଳ ଏବଂ ଆହୁରି ଅନେକ କିଛି ଅନ୍ତର୍ଭୁକ୍ତ"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Health Connect ସହିତ ଆପଣ"</string>
-    <!-- no translation found for share_data_text (6898398345784931678) -->
-    <skip />
-    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
-    <skip />
+    <string name="share_data_text" msgid="6898398345784931678"><b>"ଆପଣଙ୍କ ଆପ୍ସ ସହ ଡାଟା ସେୟାର କରନ୍ତୁ"</b>\n"ପ୍ରତ୍ୟେକ ଆପ Health Connectରୁ କେଉଁ ଡାଟା ପଢ଼ିପାରିବ କିମ୍ବା ଲେଖିପାରିବ ତାହା ବାଛନ୍ତୁ"</string>
+    <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"ଆପଣଙ୍କ ସେଟିଂସ ଏବଂ ଗୋପନୀୟତାକୁ ପରିଚାଳନା କରନ୍ତୁ"</b>\n"ଯେ କୌଣସି ସମୟରେ ଆପ ଅନୁମତିଗୁଡ଼ିକୁ ପରିବର୍ତ୍ତନ କରି ଆପଣଙ୍କ ଡାଟାକୁ ପରିଚାଳନା କରନ୍ତୁ"</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"ପଛକୁ ଫେରନ୍ତୁ"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"ଆରମ୍ଭ କରନ୍ତୁ"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"ଡାଟାକୁ ଡିଲିଟ କରନ୍ତୁ"</string>
