--- a/apk/res/values-si/strings.xml
+++ b/apk/res/values-si/strings.xml
@@ -541,10 +541,8 @@
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect ඔබට ඔබේ උපාංගයෙහි විවිධ යෙදුම් සමමුහුර්ත කිරීමට සරල ක්‍රමයක් ලබා දෙමින්, ඔබේ සෞඛ්‍ය සහ යෝග්‍යතා දත්ත ගබඩා කරයි"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect විවිධ යෙදුම්වලින් ඔබේ සෞඛ්‍ය සහ යෝග්‍යතා දත්ත ගබඩා කර සමමුහුර්ත කරයි.\n\nව්‍යායාම සැසි, පියවර, පෝෂණය, නින්ද සහ තවත් දේ ඇතුළුව, "<b>"යෝග්‍යතා සහ සුවතා දත්ත"</b>\n\n"එන්නත්, රසායනාගාර ප්‍රතිඵල සහ තවත් දේ ඇතුළුව, "<b>"සෞඛ්‍ය වාර්තා"</b></string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Health Connect සමගින් ඔබට හැකියි"</string>
-    <!-- no translation found for share_data_text (6898398345784931678) -->
-    <skip />
-    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
-    <skip />
+    <string name="share_data_text" msgid="6898398345784931678"><b>"ඔබේ යෙදුම් සමග දත්ත බෙදා ගන්න"</b>\n"එක් එක් යෙදුමට Health Connect වෙත කියවීමට හෝ ලිවීමට හැකි දත්ත තෝරා ගන්න"</string>
+    <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"ඔබේ සැකසීම් සහ පෞද්ගලිකත්වය කළමනාකරණය කරන්න"</b>\n"යෙදුම් අවසර වෙනස් කර ඕනෑම වේලාවක දී ඔබේ දත්ත කළමනාකරණය කරන්න"</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"ආපසු යන්න"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"පටන් ගන්න"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"දත්ත මකන්න"</string>
