--- a/apk/res/values-sq/strings.xml
+++ b/apk/res/values-sq/strings.xml
@@ -541,10 +541,8 @@
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect ruan të dhënat e tua të shëndetit dhe të fitnesit, duke të ofruar një mënyrë të thjeshtë për të sinkronizuar aplikacione të ndryshme në pajisjen tënde"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect ruan dhe sinkronizon të dhënat e tua të shëndetit dhe fitnesit nga aplikacione të ndryshme.\n\n"<b>"Të dhënat e fitnesit dhe mirëqenies,"</b>" duke përfshirë seancat e stërvitjes, hapat, të ushqyerit, gjumin etj.\n\n"<b>"Të dhënat shëndetësore,"</b>" duke përfshirë vaksinat, rezultatet laboratorike etj."</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Me Health Connect bëj si më poshtë"</string>
-    <!-- no translation found for share_data_text (6898398345784931678) -->
-    <skip />
-    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
-    <skip />
+    <string name="share_data_text" msgid="6898398345784931678"><b>"Ndaj të dhënat me aplikacionet e tua"</b>\n"Zgjidh të dhënat që çdo aplikacion mund të lexojë ose të shkruajë në Health Connect"</string>
+    <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"Menaxho cilësimet dhe privatësinë tënde"</b>\n"Ndrysho lejet e aplikacionit dhe menaxho të dhënat e tua në çdo kohë"</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Kthehu prapa"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Fillo"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Fshi të dhënat"</string>
