--- a/apk/res/values-zh-rHK/strings.xml
+++ b/apk/res/values-zh-rHK/strings.xml
@@ -89,7 +89,7 @@
     <string name="all_entries_button" msgid="5109091107239135235">"查看所有資料"</string>
     <string name="selected_date_view_action_description" msgid="6237240886988225664">"變更"</string>
     <string name="delete_permission_type_data_button" msgid="2270819954943391797">"刪除此資料"</string>
-    <string name="permgrouplab_health" msgid="468961137496587966">"Health Connect"</string>
+    <string name="permgrouplab_health" msgid="468961137496587966">"健康資料同步"</string>
     <string name="permgroupdesc_health" msgid="252080476917407273">"存取你的健康資料"</string>
     <string name="permlab_readCaloriesBurned" msgid="8998140381590624692">"讀取卡路里消耗量資料"</string>
     <string name="permdesc_readCaloriesBurned" msgid="9012595355389868570">"允許應用程式讀取卡路里消耗量資料"</string>
@@ -541,10 +541,8 @@
     <string name="onboarding_description" msgid="3479157507808350452">"「健康資料同步」能儲存健康和健身資料，方便你同步處理裝置上各個應用程式的資料"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"「健康資料同步」會儲存及同步來自不同應用程式的健康和健身資料。\n\n"<b>"健康和健身資料："</b>"包括運動時段、步數、營養、睡眠等等\n\n"<b>"健康記錄："</b>"包括疫苗、檢測結果等等"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"「健康資料同步」的用途"</string>
-    <!-- no translation found for share_data_text (6898398345784931678) -->
-    <skip />
-    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
-    <skip />
+    <string name="share_data_text" msgid="6898398345784931678"><b>"與你的應用程式分享資料"</b>\n"選擇每個應用程式可讀取或寫入「健康資料同步」的資料"</string>
+    <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"管理設定和私隱"</b>\n"隨時變更應用程式權限和管理資料"</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"返回"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"開始使用"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"刪除資料"</string>
@@ -1179,13 +1177,13 @@
     <string name="give_permission_prompt" msgid="5788144216023065504">"這些權限允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取裝置感應器的資料。"</string>
     <string name="allowed_apps_count" msgid="2289260267605628310">"已允許 <xliff:g id="NUMBER_0">%1$d</xliff:g> 個應用程式 (共 <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> 個)"</string>
     <string name="no_apps_requesting" msgid="8088684445910698363">"沒有任何應用程式提出要求"</string>
-    <string name="allowed" msgid="4158456017482263737">"允許"</string>
+    <string name="allowed" msgid="4158456017482263737">"已允許"</string>
     <string name="not_allowed" msgid="6092523505093372147">"不允許"</string>
     <string name="access_sensor_note" msgid="7949933977197789634">"擁有此權限的應用程式可存取裝置感應器的<xliff:g id="DATA_TYPE">%s</xliff:g>資料。"</string>
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"要移除手錶上所有應用程式的<xliff:g id="DATA_TYPE">%s</xliff:g>存取權嗎？"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"剔號"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"叉號"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」目前的健身和身心健康資料存取權：<xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="current_allow_mode" msgid="6716206063077569218">"目前，<xliff:g id="ALLOW_MODE">%2$s</xliff:g>「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取健身和身心健康資料"</string>
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"一律允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取健身和身心健康資料嗎？"</string>
     <string name="current_access" msgid="1457167070428176139">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」可以存取<xliff:g id="DATA_TYPES">%2$s</xliff:g>。"</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"管理健身和身心健康權限"</string>
