--- a/apk/res/values-zu/strings.xml
+++ b/apk/res/values-zu/strings.xml
@@ -541,10 +541,8 @@
     <string name="onboarding_description" msgid="3479157507808350452">"IHealth Connect igcina ngokuvikelekile idatha yakho yezempilo nokufaneleka, okukunikeza indlela elula yokuvumelanisa ama-app ahlukile edivayisini yakho"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"IHealth Connect igcina futhi ivumelanise idatha yakho yezempilo nokufaneleka okuvela kuma-app ahlukene.\n\n"<b>"Idatha yokufaneleka nokuphila kahle,"</b>" okuhlanganisa izikhathi zokujima, izinyathelo, ukudla okunomsoco, ukulala nokuningi\n\n"<b>"Amarekhodi ezempilo,"</b>" okuhlanganisa ukugoma, imiphumela yelebhu nokunye"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"NgeHealth Connect ungakwazi"</string>
-    <!-- no translation found for share_data_text (6898398345784931678) -->
-    <skip />
-    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
-    <skip />
+    <string name="share_data_text" msgid="6898398345784931678"><b>"Yabelana ngedatha nama-app akho"</b>\n"Khetha idatha i-app ngayinye engayifunda noma iyibhale kuHealth Connect"</string>
+    <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"Phatha amasethingi akho nobumfihlo"</b>\n"Shintsha izimvume ze-app futhi uphathe idatha yakho noma kunini"</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Iya emuva"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Qala"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Sula idatha"</string>
